--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,9 @@ default: &default
 
 development:
   <<: *default
-  database: WspolnotaDziecielskiego_development
+  database: wspolnota_dziecielskiego_development
+  username: wspolnota_dziecielskiego
+  password: haslo
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -37,7 +39,7 @@ development:
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  #host: localhost
+  host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
@@ -57,7 +59,9 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: WspolnotaDziecielskiego_test
+  database: wspolnota_dziecielskiego_test
+  username: wspolnota_dziecielskiego
+  password: haslo
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +84,6 @@ test:
 #
 production:
   <<: *default
-  database: WspolnotaDziecielskiego_production
-  username: WspolnotaDziecielskiego
-  password: <%= ENV['WSPOLNOTADZIECIELSKIEGO_DATABASE_PASSWORD'] %>
+  database: wspolnota_dziecielskiego_production
+  username: wspolnota_dziecielskiego
+  password: haslo
